--- a/TaskManager/force-app/main/default/lwc/taskList/taskList.html
+++ b/TaskManager/force-app/main/default/lwc/taskList/taskList.html
@@ -1,4 +1,4 @@
-<template>
+<!-- <template>
     <lightning-card title="Task List" icon-name="custom:custom63">
         <template if:true={tasks}>
             <lightning-datatable
@@ -8,6 +8,23 @@
                     { label: 'Due Date', fieldName: 'Due_Date__c', type: 'date' },
                     { label: 'Completed', fieldName: 'Completed__c', type: 'boolean' }
                 ]}
+                class="slds-m-around_medium"
+            ></lightning-datatable>
+        </template>
+        <template if:false={tasks}>
+            <lightning-spinner alternative-text="Loading..."></lightning-spinner>
+        </template>
+    </lightning-card>
+</template> -->
+
+
+
+<template>
+    <lightning-card title="Task List" icon-name="custom:custom63">
+        <template if:true={tasks}>
+            <lightning-datatable
+                data={tasks}
+                columns={columns}
                 class="slds-m-around_medium"
             ></lightning-datatable>
         </template>
